# Cove

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: deploy-pages.yml  release.yml
public/: skill.md
scripts/: sync-version.mjs
src/: App.css  App.tsx  configHelpers.ts  main.tsx  modelLogos.ts  tauri-mock.ts  types.ts  visionModels.ts  wordCompletion.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: config.toml  sessions.toml  shell.toml
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs
src/api/: ollama.ts  openai.ts  tauri.ts
src/components/: ChatPanel.tsx  DocWriterView.tsx  Icons.tsx  MarkdownContent.tsx  SessionList.tsx  Settings.tsx
src/data/: trustedLogos.ts
src/hooks/: useStreamingChat.ts  useVisionCapability.ts
src/pages/: ChatPage.tsx  HomePage.tsx
